# Vertexify

./: .gitignore  Cargo.toml  README.md  plan.md  rawcode.md  vertexify.toml  work.md
.github/workflows/: ci.yml
crates/vx-app/: Cargo.toml
crates/vx-app/src/: config.rs  main.rs
crates/vx-geometry/: Cargo.toml
crates/vx-geometry/src/: lib.rs
crates/vx-io/: Cargo.toml
crates/vx-io/src/: lib.rs
crates/vx-lang/: Cargo.toml
crates/vx-lang/src/: ast.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  types.rs
crates/vx-render/: Cargo.toml
crates/vx-render/src/: lib.rs
crates/vx-scene/: Cargo.toml
crates/vx-scene/src/: lib.rs
crates/vx-ui/: Cargo.toml
crates/vx-ui/src/: lib.rs
docs/vx-lang/: README.md  builtins.md  examples.md  syntax.md  types.md
examples/: basic.vx  transforms.vx
src/: main.rs
src/gui/: mod.rs
src/math/: mod.rs
src/renderer/: camera.rs  mod.rs  shader.wgsl
src/scene/: entity.rs  material.rs  mesh.rs  mod.rs
src/vx/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
