[package]
name = "vertexify"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29"
rayon = "1.10"
logos = "0.14"
wgpu = "0.19"
winit = "0.29"
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
